--- a/views/index.html
+++ b/views/index.html
@@ -17,12 +17,12 @@
     <link rel="stylesheet" href="./libraries/angular-ui-notification.min.css">
     <style>
         .responsive {
-            width: 224px;
-            height: 168px;
+            width: 100%;
+            height: 293px;
         }
 
         .fixed {
-            width: 50%;
+            width: 33%;
             table-layout: fixed;
             border-collapse: collapse;
         }
@@ -54,7 +54,7 @@
             display: block;
             overflow: auto;
             width: 100%;
-            height: 180px;
+            height: 303px;
             overflow-y: auto;
         }
     </style>
@@ -154,71 +154,170 @@
 
 
     <div class="container-fluid text-center">
-        <div class="row content">
-            <!-- <div class="col-sm-12 text-left">
-                <h1>Products
-                   
-                </h1>
-                <hr>
-            </div> -->
-            <div class="col-sm-12 text-left">
+        <!--Edit tables-->
+        <form name="images" action="{{'/UpdateProductDetails' + '/'+ myProductDetails.productName + '/'+ myProductDetails.quantity + '/'+ myProductDetails.productPrice + '/'+ myProductDetails.totalPrice + '/'+ myProductDetails.description + '/' + myProductDetails.remarks + '/' + myProductDetails._id}}"
+            enctype="multipart/form-data" method="post">
+            <table ng-if="editMode == 1" class="table table-condensed pull-left" style="background-color:#3f8196ad;width:100%;">
+                <tr>
+                    <th style="width:25%;">Edit Product Details</th>
+                </tr>
 
+                <tr>
+                    <td ng-if="myProductDetails != null">
+                        <table class="table ">
+                            <tr>
+                                <td>
+                                    <a>Product Name</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="text" ng-model="myProductDetails.productName" class="form-control">
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    <a>Product Quantity</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="text" ng-model="myProductDetails.quantity" class="form-control">
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    <a>Product price per quantity</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="text" ng-model="myProductDetails.productPrice" class="form-control">
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>
+                                    <a>Total Price</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="text" ng-model="myProductDetails.totalPrice" value="{{myProductDetails.totalPrice=myProductDetails.quantity * myProductDetails.productPrice}}"
+                                        class="form-control" disabled>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a>Product Description</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <textarea ng-model="myProductDetails.description" rows="4" cols="50" class="form-control"></textarea>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a>Product Remarks</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <textarea ng-model="myProductDetails.remarks" rows="4" cols="50" class="form-control"></textarea>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <a>Update Image</a>
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="file" name='images' class="form-control">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+
+                                </td>
+                                <td>:</td>
+                                <td>
+                                    <input type="submit" value="UPDATE" class="btn btn-default " style="background-color:rgb(126, 218, 126);color:white;" />
+                                    <a href="#" class="btn btn-default" style="background-color:rgb(90, 85, 85);color:rgb(103, 184, 209);" ng-click="hideEditTable()">CLOSE</a>
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </form>
+        <div class="row content">
+            <div ng-if="editMode == 0" class="col-sm-12 text-left">
+                <form class="col-sm-12 text-left" style="background-color:#92cec1ad ;">
+                    <div class="form-row">
+                        <div class="form-group col-md-8 pull-left">
+                            <h2>Add new Product</h2>
+                        </div>
+                        <div class="form-group col-md-4 pull-right">
+                            <h2>Products List</h2>
+                        </div>
+                    </div>
+                </form>
             </div>
             <div class="col-sm-12 text-left">
 
-                <form name="images" action="{{'/AddProduct' + '/'+ productName + '/'+ quantity + '/'+ productPrice + '/'+ totalPrice}}" enctype="multipart/form-data"
-                    method="post">
-                    <table class="table table-condensed " style="background-color:lavender;">
-                        <tr style="background-color:lavender;">
-                            <td>
-                                <h2>Add new product</h2>
-                            </td>
-                        </tr>
+                <form ng-if="editMode == 0" name="images" class="col-sm-8 text-left" action="{{'/AddProduct' + '/'+ productName + '/'+ quantity + '/'+ productPrice + '/'+ totalPrice + '/' + description + '/' + remarks}}"
+                    enctype="multipart/form-data" method="post" style="background-color:#92cec1ad ;">
 
-                        <tr>
+                    <div class="form-row">
+                        <div class="form-group col-md-3">
+                            <label for="inputEmail4">Product Name</label>
+                            <input type="text" ng-model="productName" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword4">Product Quantity</label>
+                            <input type="number" ng-model="quantity" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword4">Price per Quantity</label>
+                            <input type="number" ng-model="productPrice" class="form-control">
+                        </div>
+                        <div class="form-group col-md-3">
+                            <label for="inputPassword4">Total Price</label>
+                            <input type="number" ng-model="totalPrice" value="{{totalPrice=quantity * productPrice}}" class="form-control" disabled>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Description</label>
+                            <textarea ng-model="description" rows="4" cols="50" class="form-control"></textarea>
+                        </div>
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Remarks</label>
+                            <textarea ng-model="remarks" rows="4" cols="50" class="form-control"></textarea>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-6">
+                            <label for="inputEmail4">Upload image</label>
+                            <input type="file" class="btn btn-default" name='images' style="width:100%;">
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group col-md-12">
+                            
+                            <input type="submit" value="ADD" class="btn btn-primary" style="width:100%;" />
+                        </div>
+                    </div>
 
-                            <th>Product Name</th>
-                            <th>Product Quantity</th>
-                            <th>Price per Quantity</th>
-                            <th>Total Price</th>
-                            <th>Upload image</th>
-                            <th>Action</th>
-                        </tr>
-
-                        <tr>
-
-                            <th>
-                                <input type="text" ng-model="productName" class="form-control">
-                            </th>
-                            <th>
-                                <input type="number" ng-model="quantity" class="form-control">
-                            </th>
-                            <th>
-                                <input type="number" ng-model="productPrice" class="form-control">
-                            </th>
-                            <th>
-                                <input type="number" ng-model="totalPrice" value="{{totalPrice=quantity * productPrice}}" class="form-control" disabled>
-                            </th>
-                            <th>
-                                <input type="file" class="btn btn-default" name='images' style="width:100%;">
-                            </th>
-                            <th>
-
-                                <input type="submit" value="ADD" class="btn btn-primary" style="width:100%;" />
-                            </th>
-                        </tr>
-
-                    </table>
                 </form>
-                <p></p>
-                <h2>List of all Products</h2>
-                <p></p>
-                <table class="fixed pull-left" style="background-color:#92cec1ad ;">
+
+                <table ng-if="editMode == 0" class="fixed pull-left" style="background-color:#92cec1ad ;">
                     <thead>
                         <tr>
-                            <td><b>Sl no</b></td>
-                            <td><b>Product Name</b></td>
-                            <td><b>Product ID</b></td>
+                            <td>
+                                <b>Sl no</b>
+                            </td>
+                            <td>
+                                <b>Product Name</b>
+                            </td>
+
                         </tr>
                     </thead>
                     <tbody>
@@ -229,25 +328,23 @@
                             <td style="border-bottom: 1px solid #ddd;">
                                 <a href="#" style="color:black;" ng-click="getDetails(product._id)">{{product.productName}}</a>
                             </td>
-                            <td style="border-bottom: 1px solid #ddd;">
-                                <a href="#" style="color:black;" ng-click="getDetails(product._id)">{{product._id}}</a>
-                            </td>
                         </tr>
                     </tbody>
                 </table>
-                
-                <table class="table table-condensed pull-left" style="background-color:#3f8196ad;width:25%;">
+
+                <table ng-if="editMode == 0" class="table table-condensed pull-left" style="background-color:#3f8196ad;width:70%;">
                     <tr>
-                        <th style="width:25%;">Product Details</th>
+                        <th>Product Details</th>
                     </tr>
+
                     <tr>
                         <td ng-if="myProductDetails != null">
                             <table class="table ">
                                 <tr>
-                                    <td>
+                                    <td style="width: 32%;">
                                         <a>Product Name</a>
                                     </td>
-                                    <td>:</td>
+                                    <td style="width: 1%;">:</td>
                                     <td>
                                         {{myProductDetails.productName}}
                                     </td>
@@ -282,14 +379,42 @@
                                         {{myProductDetails.totalPrice}}
                                     </td>
                                 </tr>
-                            </table>
+                                <tr>
+                                    <td>
+                                        <a>Description</a>
+                                    </td>
+                                    <td>:</td>
+                                    <td>
+                                        {{myProductDetails.description}}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
+                                        <a>Remarks</a>
+                                    </td>
+                                    <td>:</td>
+                                    <td>
+                                        {{myProductDetails.remarks}}
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>
 
+                                    </td>
+                                    <td>:</td>
+                                    <td>
+                                        <a href="#" class="btn btn-default" style="background-color:rgb(126, 218, 126);color:white;" ng-click="getDetails(myProductDetails._id);hideShowTable()">EDIT</a>
+                                        <a href="#" class="btn btn-default" style="background-color:rgb(218, 55, 55);color:white;" data-toggle="modal" data-target="#myDeleteModal"
+                                            data-ng-click="sendToDeleteProduct(myProductDetails._id)">DELETE</a>
+                                    </td>
+                                </tr>
+                            </table>
                         </td>
                     </tr>
                 </table>
-                <table class="table table-condensed pull-left" style="background-color:#3f8196ad;width:25%;text-align:center;">
+                <table ng-if="editMode == 0" class="table table-condensed pull-left" style="background-color:#3f8196ad;width:30%;text-align:center;">
                     <tr>
-                        <th style="width:25%;">Product Image</th>
+                        <th>Product Image</th>
                     </tr>
                     <tr>
                         <td ng-if="myProductDetails != null" style="text-align:center;">
@@ -298,11 +423,22 @@
                     </tr>
                 </table>
 
-
             </div>
         </div>
     </div>
-    <!-- Product register Modal -->
+    <!-- Product delete conform Modal -->
+
+    <div class="modal fade" id="myDeleteModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+        <div class="modal-dialog modal-sm" role="document">
+            <div class="modal-content">
+                <div class="modal-body" style="background-color: rgba(255, 0, 0, 0.4);text-align: center;">
+                    <span style="color:white;font-size:14px;">Are you sure to delete this Product details?</span>
+                    <button type="button" class="btn btn-default " data-dismiss="modal">No</button>
+                    <button data-ng-click="delete(productId)" type="button" class="btn btn-primary ">Yes</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- Angular JS -->
     <script src="./angular/index.js"></script>
